[package]
name = "rhusics"
version = "0.1.0"
authors = ["Simon Rönnberg <seamonr@gmail.com>"]
repository = "https://github.com/Rhuagh/rhusics.git"
homepage = "https://github.com/Rhuagh/rhusics.git"

license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/rhusics"
description = "Physics library for use with `specs`"

keywords = ["gamedev", "cgmath", "specs", "physics"]

[features]
double = []

[dependencies]
cgmath = "0.15"
collision = { path = "../collision-rs/" }
specs = "0.9"
rand = "0.3"
shrev = "0.4"

[dev-dependencies]
