[package]
name = "rhusics"
version = "0.1.0"
authors = ["Simon Rönnberg <seamonr@gmail.com>"]
repository = "https://github.com/Rhuagh/rhusics.git"
homepage = "https://github.com/Rhuagh/rhusics.git"

license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/rhusics"
description = "Physics library for use with `specs`"

keywords = ["gamedev", "cgmath", "specs", "physics"]

[features]
double = []

ecs = ["specs", "shrev"]

[dependencies]
cgmath = "0.15"
collision = { git = "https://github.com/kvark/collision-rs/" }
specs = { version = "0.10", optional = true}
shrev = { version = "0.8", optional = true}

[dev-dependencies]
approx = "0.1"

[[example]]
name = "basic2d"
required-features = ["ecs"]

[[example]]
name = "basic3d"
required-features = ["ecs"]

[[example]]
name = "spatial3d"
required-features = ["ecs"]
