[package]
name = "rhusics-core"
version = "0.2.0"
authors = ["Simon Rönnberg <seamonr@gmail.com>"]
repository = "https://github.com/rustgd/rhusics.git"
homepage = "https://github.com/rustgd/rhusics.git"

license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rhusics-core"
description = "Physics library for use with `specs`"

keywords = ["gamedev", "cgmath", "specs", "physics"]

[features]
eders = ["serde", "cgmath/serde", "collision/eders"]

[dependencies]
cgmath = "0.16"
collision = { version = "0.15" }
specs = { version = "0.10", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"]}

[dev-dependencies]
approx = "0.1"
