[package]
name = "rhusics-core"
version = "0.4.0"
authors = ["Simon Rönnberg <seamonr@gmail.com>"]
repository = "https://github.com/rustgd/rhusics.git"
homepage = "https://github.com/rustgd/rhusics.git"

license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rhusics-core"
description = "Physics library for use with `specs`"

keywords = ["gamedev", "cgmath", "specs", "physics"]

[dependencies]
cgmath = "0.16"
collision = { version = "0.18" }
rhusics-transform = { version = "0.3.0", path = "../rhusics-transform" }
specs = { version = "0.11", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"]}

[target.'cfg(feature = "serde")'.dependencies]
cgmath = { version = "0.16", features = ["serde"] }
collision = { version = "0.18", features = ["serde"] }

[dev-dependencies]
approx = "0.1"
