[package]
name = "rhusics-ecs"
version = "0.7.0"
authors = ["Simon Rönnberg <seamonr@gmail.com>"]
repository = "https://github.com/rustgd/rhusics.git"
homepage = "https://github.com/rustgd/rhusics.git"

license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rhusics-ecs"
description = "Physics library for use with `specs`"

keywords = ["gamedev", "cgmath", "specs", "physics"]

[dependencies]
cgmath = "0.16"
collision = { version = "0.18" }
failure = "0.1"
rhusics-core = { version = "0.7.0", path = "../rhusics-core", features = ["specs"] }
specs = { version = "0.14" }
shred = { version = "0.7" }
shred-derive = { version = "0.5" }
shrev = { version = "1.0" }
serde = { version = "1.0", optional = true, features = ["derive"]}

[target.'cfg(feature = "serde")'.dependencies]
cgmath = { version = "0.16", features = ["serde"] }
collision = { version = "0.18", features = ["serde"] }
rhusics-core = { version = "0.7.0", path = "../rhusics-core", features = ["specs", "serde"] }
specs = { version = "0.12", features = ["serde"] }

[[example]]
name = "basic2d"

[[example]]
name = "basic3d"

[[example]]
name = "spatial3d"

[[example]]
name = "spatial2d"
