[package]
name = "rhusics-ecs"
version = "0.9.0"
authors = [
    "Simon Rönnberg <seamonr@gmail.com>",
    "Thomas O'Dell <thomas_odell@trsolutions.biz>"
    ]
repository = "https://github.com/rustgd/rhusics.git"
homepage = "https://github.com/rustgd/rhusics.git"

license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rhusics-ecs"
description = "Physics library for use with `specs`"

keywords = ["gamedev", "cgmath", "specs", "physics"]

[features]
serializable = ["serde", "cgmath/serde", "collision/serde", "rhusics-core/serializable"]

[dependencies]
cgmath = "0.17"
collision = { version = "0.20" }
failure = "0.1"
rhusics-core = { version = "0.9.0", path = "../rhusics-core", features = ["specs"] }
specs = { version = "0.16" }
shred = { version = "0.10" }
shred-derive = { version = "0.6" }
shrev = { version = "1.1" }
serde = { version = "1.0", optional = true, features = ["derive"] }

[[example]]
name = "basic2d"

[[example]]
name = "basic3d"

[[example]]
name = "spatial3d"

[[example]]
name = "spatial2d"
