[package]
name = "rhusics-transform"
version = "0.1.0"
authors = ["Simon Rönnberg <seamonr@gmail.com>"]
repository = "https://github.com/rustgd/rhusics.git"
homepage = "https://github.com/rustgd/rhusics.git"

license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rhusics-transform"
description = "Physics library for use with `specs`"

keywords = ["gamedev", "cgmath", "specs", "physics"]

[dependencies]
cgmath = "0.16"
collision = "0.15"
